src/test/deca/context/valid/test_bool_valid.deca
{
    boolean a = true;
    boolean b = false;
    boolean c;
    
    // Test && et || avec des booléens
    c = a && b; 
    c = (1 < 2) || (3 == 3); 
}