src/test/deca/context/invalid/created/test_sans_obj_invalid.deca

{
    int a;
    float b;
    boolean c;

   
    c = readInt();        // Erreur : affectation int vers boolean
    println(c);          
    
    println(b + true);    
    
  
}